<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_HMI" Id="{a883c6ea-c741-4d59-982d-b1ca4f5ac874}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	input_1 : BOOL;
	input_2	: BOOL;
	output_1:BOOL;
	
	//Countervariablen
	btn_CTU	: BOOL;
	btn_CTD	: BOOL;
	Counter	: DINT;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>